@@ -185,12 +185,12 @@ namespace video
 		"mov r0.xy, t0          ; color map  \n"\
 		" \n"\
 		"; original parallax mapping: \n"\
-		"; emulate ps1x _bx2, so substract 0.5f and multiply by 2 \n"\
+		"; emulate ps1x _bx2, so subtract 0.5f and multiply by 2 \n"\
 		"mad r1.xyz, r1, r11, c0; \n"\
 		" \n"\
 		"mul r3, r1.wwww, c6;   ; r3 = (height, height, height) * scale \n"\
 		" \n"\
-		"; emulate ps1x _bx2, so substract 0.5f and multiply by 2 \n"\
+		"; emulate ps1x _bx2, so subtract 0.5f and multiply by 2 \n"\
 		"mad r4.xyz, r4, r11, c0; \n"\
 		" \n"\
 		"mad r2.xy, r3, r4, r0  ; newTexCoord = height * eye + oldTexCoord  \n"\
@@ -205,7 +205,7 @@ namespace video
 		"mov r2.xyz, t2          ; fetch light vector 1 \n"\
 		"mov r3.xyz, t3          ; fetch light vector 2 \n"\
 		" \n"\
-		"; emulate ps1x _bx2, so substract 0.5f and multiply by 2 \n"\
+		"; emulate ps1x _bx2, so subtract 0.5f and multiply by 2 \n"\
 		"mad r1.xyz, r1, r11, c0; \n"\
 		"mad r2.xyz, r2, r11, c0; \n"\
 		"mad r3.xyz, r3, r11, c0; \n"\
