@@ -85,7 +85,7 @@ endif
 ifdef PROFILE
 CPPFLAGS += -pg
 endif
-CFLAGS := -DPNG_THREAD_UNSAFE_OK -DPNG_NO_MMX_CODE -DPNG_NO_MNG_FEATURES -DPNG_ARM_NEON_OPT=0
+CFLAGS += -DPNG_THREAD_UNSAFE_OK -DPNG_NO_MMX_CODE -DPNG_NO_MNG_FEATURES -DPNG_ARM_NEON_OPT=0
 
 sharedlib sharedlib_osx: CPPFLAGS += -fPIC
 # TODO: also necessary on sharedlib_osx?
