@@ -334,6 +334,8 @@ Changes in 1.9 (not yet released)
 
 --------------------------
 Changes in 1.8.6 
+- Makefile now only adds CFLAGS instead of overwriting them.
+- Several spelling fixes (Patch #455). Thanks @J. Puydt
 
 --------------------------
 Changes in 1.8.5 (1st November 2021, svn [r6263])
